# DynaG

./: .gitignore  MANIFEST.in  README.md  example.py  setup.py
docs/: dynamics.md  dynamics_build.md  helicopter.md  hover.md  renderer.md  renderer_build.md
dynag/: CMakeLists.txt  __init__.py  helicopter.py  helicopter_with_tasks.py
dynag/dynamics/: CMakeLists.txt  __init__.py  dynamicsAPI.py  dynamics_impl.py
dynag/dynamics/cmake/: FindDBGHELP.cmake  FindYAML.cmake
dynag/dynamics/libs/: libyaml-cpp.so.0.7  yaml-cpp.lib
dynag/dynamics/src/: dyn_api.cpp  dyn_api.h  dynamics.cpp  dynamics.h  error_handler.cpp  error_handler.h  kinematics.cpp  kinematics.h  lookup.cpp  lookup.h  utils.cpp  utils.h  vectorspace.cpp  vectorspace.h
dynag/dynamics/src/helicopter/: helicopter_dynamics.cpp  helicopter_dynamics.h
dynag/helis/: aw109.yaml
dynag/renderer/: CMakeLists.txt  TODO  __init__.py  renderAPI.py  renderer_impl.py
dynag/renderer/cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSTB.cmake
dynag/renderer/libs/: GLAD.lib  imgui.lib
dynag/renderer/src/: camera.cpp  camera.h  gWindow.cpp  gWindow.h  mesh.cpp  mesh.h  model.cpp  model.h  ren_api.cpp  ren_api.h  shader.h
dynag/renderer/src/base/: app.cpp  app.h  includes.h  model.h  window.cpp  window.h
dynag/renderer/src/gl/: gl_app.cpp  gl_app.h  gl_mesh.cpp  gl_mesh.h  gl_model.cpp  gl_model.h  gl_shader.h  gl_window.cpp  gl_window.h
dynag/renderer/src/opengl/: gl_model.cpp  gl_model.h  gl_window.cpp  gl_window.h
dynag/renderer/src/vk/: vk_app.cpp  vk_app.h  vk_buffer.cpp  vk_buffer.h  vk_descriptor.cpp  vk_descriptor.h  vk_device.cpp  vk_device.h  vk_material.cpp  vk_material.h  vk_model.cpp  vk_model.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_swap_chain.cpp  vk_swap_chain.h  vk_texture.cpp  vk_texture.h  vk_utils.h  vk_window.cpp  vk_window.h
